noinst_PROGRAMS=nonblockw mcopy pendlock deadlock lockeof mandatory
nonblockw_SOURCES= nonblockw.c 
nonblockw_LDADD=$(top_srcdir)/src/lib/libapue.a

mcopy_SOURCES= mcopy.c 
mcopy_LDADD=$(top_srcdir)/src/lib/libapue.a

pendlock_SOURCES= pendlock.c 
pendlock_LDADD=$(top_srcdir)/src/lib/libapue.a

deadlock_SOURCES= deadlock.c 
deadlock_LDADD=$(top_srcdir)/src/lib/libapue.a

lockeof_SOURCES= lockeof.c 
lockeof_LDADD=$(top_srcdir)/src/lib/libapue.a

mandatory_SOURCES= mandatory.c 
mandatory_LDADD=$(top_srcdir)/src/lib/libapue.a
