noinst_PROGRAMS=filehole bufsize fileStatusFlags
filehole_SOURCES= filehole.c 
filehole_LDADD=$(top_srcdir)/src/lib/libapue.a 

bufsize_SOURCES=setfl.c bufsize.c 
bufsize_LDADD=$(top_srcdir)/src/lib/libapue.a 

fileStatusFlags_SOURCES= fileStatusFlags.c 
fileStatusFlags_LDADD=$(top_srcdir)/src/lib/libapue.a 
