noinst_PROGRAMS=pipe1 more1 more2 myuclc popen1 add2 pipe4 add2stdio spipe4 msg1 semp1 tshm devzero

pipe1_SOURCES= pipe1.c 
pipe1_LDADD=$(top_srcdir)/src/lib/libapue.a

more1_SOURCES= more1.c 
more1_LDADD=$(top_srcdir)/src/lib/libapue.a

more2_SOURCES= more2.c 
more2_LDADD=$(top_srcdir)/src/lib/libapue.a

myuclc_SOURCES= myuclc.c 
myuclc_LDADD=$(top_srcdir)/src/lib/libapue.a

popen1_SOURCES= popen1.c 
popen1_LDADD=$(top_srcdir)/src/lib/libapue.a

add2_SOURCES= add2.c 
add2_LDADD=$(top_srcdir)/src/lib/libapue.a

pipe4_SOURCES= pipe4.c 
pipe4_LDADD=$(top_srcdir)/src/lib/libapue.a

add2stdio_SOURCES= add2stdio.c 
add2stdio_LDADD=$(top_srcdir)/src/lib/libapue.a

spipe4_SOURCES= spipe4.c 
spipe4_LDADD=$(top_srcdir)/src/lib/libapue.a

msg1_SOURCES= msg1.c 
msg1_LDADD=$(top_srcdir)/src/lib/libapue.a

semp1_SOURCES= semp1.c 
semp1_LDADD=$(top_srcdir)/src/lib/libapue.a

tshm_SOURCES= tshm.c 
tshm_LDADD=$(top_srcdir)/src/lib/libapue.a

devzero_SOURCES= devzero.c 
devzero_LDADD=$(top_srcdir)/src/lib/libapue.a
