noinst_PROGRAMS=forkExample vforkExample waitExample zombieAvoid raceCondition execExample interpret mysystest1 tsys printuids timesExample mysystest2
forkExample_SOURCES= forkExample.c 
forkExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

vforkExample_SOURCES= vforkExample.c 
vforkExample_LDADD=$(top_srcdir)/src/lib/libapue.a 


waitExample_SOURCES= waitExample.c 
waitExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

zombieAvoid_SOURCES= zombieAvoid.c 
zombieAvoid_LDADD=$(top_srcdir)/src/lib/libapue.a 


raceCondition_SOURCES= raceCondition.c 
raceCondition_LDADD=$(top_srcdir)/src/lib/libapue.a 

execExample_SOURCES= execExample.c 
execExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

interpret_SOURCES= interpret.c 
interpret_LDADD=$(top_srcdir)/src/lib/libapue.a 

mysystest1_SOURCES= mysystem.c mysystest1.c
mysystest1_LDADD=$(top_srcdir)/src/lib/libapue.a 


tsys_SOURCES= mysystem.c tsys.c
tsys_LDADD=$(top_srcdir)/src/lib/libapue.a

printuids_SOURCES= printuids.c 
printuids_LDADD=$(top_srcdir)/src/lib/libapue.a 

timesExample_SOURCES= timesExample.c 
timesExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

mysystest2_SOURCES= mysystem.c mysystest2.c
mysystest2_LDADD=$(top_srcdir)/src/lib/libapue.a 
