noinst_PROGRAMS=sigusr1 sleep2 sigprocmaskExample sigjmpExample criticalRegion globalVariable parentchild childparent longjmpExample sigtstop
sigusr1_SOURCES= sigusr1.c 
sigusr1_LDADD=$(top_srcdir)/src/lib/libapue.a 

sleep2_SOURCES= sleep2.c 
sleep2_LDADD=$(top_srcdir)/src/lib/libapue.a 

sigprocmaskExample_SOURCES= sigprocmaskExample.c 
sigprocmaskExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

sigjmpExample_SOURCES= sigjmpExample.c 
sigjmpExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

longjmpExample_SOURCES= longjmpExample.c 
longjmpExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

criticalRegion_SOURCES= criticalRegion.c 
criticalRegion_LDADD=$(top_srcdir)/src/lib/libapue.a 

globalVariable_SOURCES= globalVariable.c 
globalVariable_LDADD=$(top_srcdir)/src/lib/libapue.a 

parentchild_SOURCES= parent_child.c 
parentchild_LDADD=$(top_srcdir)/src/lib/libapue.a 

childparent_SOURCES= child_parent.c 
childparent_LDADD=$(top_srcdir)/src/lib/libapue.a 

sigtstop_SOURCES= sigtstop.c 
sigtstop_LDADD=$(top_srcdir)/src/lib/libapue.a 
