noinst_PROGRAMS=fputcExample fputsExample printfExample tempfileExample tempfileName
fputcExample_SOURCES= fputcExample.c 
fputcExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

fputsExample_SOURCES= fputsExample.c 
fputsExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

printfExample_SOURCES= printfExample.c 
printfExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

tempfileExample_SOURCES= tempfileExample.c 
tempfileExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

tempfileName_SOURCES= tempfileName.c 
tempfileName_LDADD=$(top_srcdir)/src/lib/libapue.a 
