noinst_PROGRAMS=settty gettty isatty getpass raw
settty_SOURCES= settty.c 
settty_LDADD=$(top_srcdir)/src/lib/libapue.a 

gettty_SOURCES= gettty.c 
gettty_LDADD=$(top_srcdir)/src/lib/libapue.a 

isatty_SOURCES= isatty.c 
isatty_LDADD=$(top_srcdir)/src/lib/libapue.a 

getpass_SOURCES= getpass.c 
getpass_LDADD=$(top_srcdir)/src/lib/libapue.a 

raw_SOURCES= raw.c 
raw_LDADD=$(top_srcdir)/src/lib/libapue.a 

