noinst_PROGRAMS=filetype accessExample umaskExample chmodExample unlinkExample utimeExample chdirExample getpwdExample printDev

filetype_SOURCES= filetype.c 
filetype_LDADD=$(top_srcdir)/src/lib/libapue.a 

accessExample_SOURCES= access_expample.c 
accessExample_LDADD=$(top_srcdir)/src/lib/libapue.a 


umaskExample_SOURCES= umaskExample.c 
umaskExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

chmodExample_SOURCES= chmodExample.c 
chmodExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

unlinkExample_SOURCES= unlinkExample.c 
unlinkExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

utimeExample_SOURCES= utimeExample.c 
utimeExample_LDADD=$(top_srcdir)/src/lib/libapue.a 


chdirExample_SOURCES= chdirExample.c 
chdirExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

getpwdExample_SOURCES= getpwdExample.c 
getpwdExample_LDADD=$(top_srcdir)/src/lib/libapue.a 

printDev_SOURCES= printDev.c 
printDev_LDADD=$(top_srcdir)/src/lib/libapue.a
