noinst_LIBRARIES=libapue.a
libapue_a_SOURCES  = bsd_ptyopen.c bufargs.c cliconn.c clrfl.c daemonize.c error.c errorlog.c linux_ptyopen.c lockreg.c locktest.c nspipe.c openmax.c pathalloc.c popen.c prexit.c prmask.c ptyfork.c readn.c recvfd.c senderr.c sendfd.c servaccept.c servlisten.c setfl.c signal.c signalintr.c sleep.c sleepus.c spipe.c tellwait.c ttymodes.c writen.c
